Improve readability